[gd_scene load_steps=4 format=2]

[ext_resource path="res://Action RPG Resources/UI/EnemyHealthUI.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/UI/BarBack.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/UI/Barover2.png" type="Texture" id=5]

[node name="EnemyHealthUI" type="Control"]
margin_left = 218.0
margin_right = 258.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_left = 2.0
margin_right = 102.0
margin_bottom = 7.0
value = 49.0
texture_under = ExtResource( 2 )
fill_mode = 1
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 0.611765, 0.32549, 0.32549, 1 )
tint_progress = Color( 0.85098, 0.219608, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3

[node name="HealthRedEffect" type="TextureProgress" parent="."]
margin_left = 2.0
margin_right = 102.0
margin_bottom = 7.0
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 1
tint_progress = Color( 0.85098, 0.219608, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3

[node name="surplusHealthBar" type="TextureProgress" parent="."]
margin_left = 1.0
margin_right = 102.0
margin_bottom = 7.0
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 2 )
fill_mode = 1
tint_under = Color( 0.12549, 0.105882, 0.105882, 0 )
tint_over = Color( 0.611765, 0.32549, 0.32549, 1 )
tint_progress = Color( 0.207843, 0.85098, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3

[node name="UpdateTween" type="Tween" parent="."]
